feat: Paper API + Adventure API implementation